# TestCode

./: .gitignore  Angular_DIGITS.pages  Kalman.pages  NLPIntro.pages  README.md  arcspy.pages  fixmac.sh  lecture1_backup  notxt.sh  opencvjs.pages  pyplotnotes.pages  rename.sh  vision  week2_hinton.pages
Boilerplate/: README.md
Example1_Models/: README.md  index.html  server.py  testserver.py
Example2_ModelsCollection/: README.md
Models Project/: index.html
TestAWS/: README.md  connect.sh  gpu2.pem
TestAngular/: README.md
TestAngularBackbone/: README.md
TestAvro/: README.md
TestBackbone/: .gitignore  README.md
TestBear/: README.md  TestBear.py  test.py  vid.py
TestBootstrap/: .gitignore  README.md  Untitled.pages
TestCDH/: .project  AddSM.py  AddSM.py.save  AfterInitServices.py  HTMLtoJSONParser.py  README.md  addSM.py~  afterinitservices.py~  beforeyarnafterhdfs.sh  cdh.py  clean.py  cleandatanode.sh  config.py  core-site.xml  createcluster.py  debughdfs.py  debughdfs.py~  distribute.sh  dssdafterinitservices.py  fixgit.sh  gethostids.py  hddcluster.sh  hdfs-site.xml  hdfshddconfig.txt  hosts.py  impala.py  impala.py.save.1  impaladssd.py  impalahddconfig.txt  impalahddconfig.txt.save  impalaquery.py  initservices.py  installservices.py.save  jmx.sh  jmx1.sh  load_sm_constants.py  load_sm_constants.py~  makedata.sh  outputconfig  pom.xml  (+19 more)
TestChatPython/: README.md
TestCoding/: .gitignore  (+38 more)
TestOpencv/1_camera/camera_sl/: CMakeLists.txt  camera.cpp  camera.ipynb  make.sh
TestOpencv/1_camera/camera_sl/.ipynb_checkpoints/: camera-checkpoint.ipynb
(+1677 files in other folders)
